--- a/media.html
+++ b/media.html
@@ -21,31 +21,31 @@
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                   <li class="nav-item active">
-                      <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                      <a class="nav-link active" aria-current="page" href="/ggp/index.html">HOME</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" href="about.html">ABOUT</a>
+                      <a class="nav-link active" href="/ggp/about.html">ABOUT</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" href="placement.html">PLACEMENTS</a>
+                      <a class="nav-link active" href="/ggp/placement.html">PLACEMENTS</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" href="committee.html">COMMITTEES</a>
+                      <a class="nav-link active" href="/ggp/committee.html">COMMITTEES</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" href="campus.html">CAMPUS</a>
+                      <a class="nav-link active" href="/ggp/campus.html">CAMPUS</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" href="images.html">IMAGES</a>
+                      <a class="nav-link active" href="/ggp/images.html">IMAGES</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" href="student.html">STUDENT LIFE</a>
+                      <a class="nav-link active" href="/ggp/student.html">STUDENT LIFE</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link active" href="media.html">NEWS & MEDIA</a>
+                      <a class="nav-link active" href="/ggp/media.html">NEWS & MEDIA</a>
                   </li>
                   <li class="nav-item active">
-                      <a class="nav-link active" href="contact.html">CONTACT US</a>
+                      <a class="nav-link active" href="/ggp/contact.html">CONTACT US</a>
                   </li>
               </ul>
               <form class="d-flex" role="search">
