--- a/student.html
+++ b/student.html
@@ -18,28 +18,28 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">HOME</a>
+          <a class="nav-link active" aria-current="page" href="/ggp/">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">ABOUT</a>
+          <a class="nav-link active" href="/ggp/about.html">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">PLACEMENTS</a>
+          <a class="nav-link active" href="/ggp/placement.html">PLACEMENTS</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link active" href="#">COMMITTEES</a>
+          <a class="nav-link active" href="/ggp/committee.html">COMMITTEES</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link active" href="#">CAMPUS</a>
+          <a class="nav-link active" href="/ggp/contact.html">CAMPUS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active">STUDENT LIFE</a>
+          <a class="nav-link active" href="/ggp/student.html">STUDENT LIFE</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link active" href="#">NEWS & MEDIA</a>
+          <a class="nav-link active" href="/ggp/media.html">NEWS & MEDIA</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link active" href="#">CONTACT US</a>
+          <a class="nav-link active" href="/ggp/contact.html">CONTACT US</a>
         </li>
       </ul>
 
