--- a/committee.html
+++ b/committee.html
@@ -38,6 +38,9 @@
                   <li class="nav-item">
                       <a class="nav-link active" href="/ggp/student.html">STUDENT LIFE</a>
                   </li>
+                <li class="nav-item">
+                        <a class="nav-link active" href="/ggp/admission.html">ADMISSION</a>
+                    </li>
                   <li class="nav-item">
                       <a class="nav-link active" href="/ggp/media.html">NEWS & MEDIA</a>
                   </li>
