--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,9 @@
                         <a class="nav-link active" href="/ggp/student.html">STUDENT LIFE</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" href="/ggp/admission.html">ADMISSION</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="/ggp/media.html">NEWS & MEDIA</a>
                     </li>
                     <li class="nav-item active">
