--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                         <a class="nav-link active" href="/ggp/admission.html">ADMISSION</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" href="/ggp/admission.html">ADMISSION</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="/ggp/media.html">NEWS & MEDIA</a>
                     </li>
                     <li class="nav-item active">
