--- a/media.html
+++ b/media.html
@@ -41,6 +41,9 @@
                   <li class="nav-item">
                       <a class="nav-link active" href="/ggp/student.html">STUDENT LIFE</a>
                   </li>
+                <li class="nav-item">
+                        <a class="nav-link active" href="/ggp/admission.html">ADMISSION</a>
+                    </li>
                   <li class="nav-item">
                       <a class="nav-link active" href="/ggp/media.html">NEWS & MEDIA</a>
                   </li>
