--- a/index.html
+++ b/index.html
@@ -29,35 +29,35 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link active" aria-current="page" href="/ggp/index.html">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="/ggp/index.html"><i class="fa fa-home"></i>>HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/about.html">ABOUT</a>
+                        <a class="nav-link active" href="/ggp/about.html"><i class="fa fa-user">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/placement.html">PLACEMENTS</a>
+                        <a class="nav-link active" href="/ggp/placement.html"><i class="fa fa-services">>PLACEMENTS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/committee.html">COMMITTEES</a>
+                        <a class="nav-link active" href="/ggp/committee.html"><i class="fa fa-committee">>COMMITTEES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/campus.html">CAMPUS</a>
+                        <a class="nav-link active" href="/ggp/campus.html"><i class="fa fa-campus">CAMPUS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/images.html">IMAGES</a>
+                        <a class="nav-link active" href="/ggp/images.html"><i class="fa fa-gallery">IMAGES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/student.html">STUDENT LIFE</a>
+                        <a class="nav-link active" href="/ggp/student.html"><i class="fa fa-student">STUDENT LIFE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/admission.html">ADMISSION</a>
+                        <a class="nav-link active" href="/ggp/admission.html"><i class="fa fa-home">ADMISSION</a>
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/media.html">NEWS & MEDIA</a>
+                        <a class="nav-link active" href="/ggp/media.html"><i class="fa fa-media">NEWS & MEDIA</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link active" href="/ggp/contact.html">CONTACT US</a>
+                        <a class="nav-link active" href="/ggp/contact.html"><i class="fa fa-phone">CONTACT US</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
