--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/ggp/admission.html"><i class="fa fa-home">ADMISSION</a>
+                        <div><ul>
+                       <li><a  href="">Fee Structure</a></li>
+                            <li><a  href="">Document Checklist</a></li>
+                            <li><a  href="">Contact Details</a></li></ul>
+                        </div>
                     </li>
                     
                     <li class="nav-item">
