--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         <a class="nav-link active" href="/ggp/about.html"><i class="fa fa-user">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/placement.html"><i class="fa fa-services">>PLACEMENTS</a>
+                        <a class="nav-link active" href="/ggp/placement.html"><i class="fa fa-services">PLACEMENTS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/ggp/committee.html"><i class="fa fa-committee">>COMMITTEES</a>
+                        <a class="nav-link active" href="/ggp/committee.html"><i class="fa fa-committee">COMMITTEES</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/ggp/campus.html"><i class="fa fa-campus">CAMPUS</a>
