--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link active" aria-current="page" href="/ggp/index.html"><i class="fa fa-home"></i>>HOME</a>
+                        <a class="nav-link active" aria-current="page" href="/ggp/index.html"><i class="fa fa-home"></i>HOME</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/ggp/about.html"><i class="fa fa-user">ABOUT</a>
