--- a/admission.html
+++ b/admission.html
@@ -161,7 +161,18 @@
       <button type="submit" class="btn btn-primary">Contact Now</button>
     </div>
   </form>
-
+<div class="card text-center">
+        <div class="card-header">
+            <h5>Contact No</h5>0551-2501615
+        </div>
+        <div class="card-body">
+            <h3 class="card-title">ggpgkp@gmail.com</h3>
+            <p class="card-text">Asuran,Near Asuran Police Chowki,Gorakhpur,Uttar Pradesh 273004</p>
+            <p class="card-text"><h5>Online Grievance Redressal System</h5></p>
+            </div>
+        <div class="card-footer text-body-secondary">
+        </div>
+    </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
