--- a/index.html
+++ b/index.html
@@ -137,25 +137,35 @@
       </div>
     </div>
   </div>
-    <div id="carouselExampleIndicators" class="carousel slide   carousel-fade" >
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"  aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"   aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"   aria-label="Slide 3"></button>
+    div id="carouselExampleDark" class="carousel carousel-dark slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <img src="p3.jpg" height="600px" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>Government Girls Polytechnic GORAKHPUR</h1>
+          <p><h5> </h5></p>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="s.jpg"  height="600px"class="d-block w-100" alt="...">
-            
-          </div>
-          <div class="carousel-item">
-            <img src="gkp.jpeg" height="600px" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="p3.jpg" height="600px" class="d-block w-100" alt="...">
-          </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="s.jpg"  height="600px" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>Live in Culture and more Discpline</h1>
+          <p><h5></h5></p>
         </div>
-         </div>
+      </div>
+      <div class="carousel-item">
+        <img src="gkp.jpeg" height="600px"class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>Better Education Facilities</h1>
+          <p><h1> </h5></p>
+        </div>
+      </div>
+    </div>
      <h1>FEATURES AND FACILITIES..</h1>
     <div class="card-group  border:btn-outline-primary">
         <div class="card border:2px solid black">
