--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
       </div>
     </div>
-     <h1 class="text=center text-sm-start">FEATURES AND FACILITIES..</h1>
+     <h1 class="text-center">FEATURES AND FACILITIES..</h1>
     <div class="card-group  border:btn-outline-primary">
         <div class="card" style="width:18rem;">
             <img src="m.jpg" class="card-img-top" alt="...">
@@ -232,7 +232,7 @@
             
         </div>
     </div>
-    <h1class="text=center text-sm-start" >COURSES..</h1>
+    <h1class="text-center" >COURSES..</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card"style="width:18rem;">
@@ -292,7 +292,7 @@
             </div>
         </div>
     </div>
-    <h1 class="text=center text-sm-start"> STUDENT ACHIVEMENTS..</h1>
+    <h1 class="text-center"> STUDENT ACHIVEMENTS..</h1>
     <div class="card-group">
         <div class="card"style="width:18rem;">
             <img src="u.jpg" class="card-img-top" alt="...">
@@ -317,7 +317,7 @@
         </div>   
         </div>
     </div>
-    <h1 class="text=center text-sm-start">CAMPUS LIFE..</h1>
+    <h1 class="text-center">CAMPUS LIFE..</h1>
     <div class="card mb-3">
         <img src="cp.jpg"  height="500px"class="card-img-top" alt="...">
         <div class="card-body"style="width:18rem;"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#LoginModal">
