--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<body>
+<body background="v2.jpg">
    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">GOV. GIRLS GORAKHPUR</a>
@@ -190,7 +190,7 @@
         </div>
         
             <div class="card" >
-            <img src="pa.jpg" class="card-img-top" alt="...">
+            <img src="w1.jpg" class="card-img-top" alt="...">
             <div class="card-body"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#LoginModal">
                 <h5 class="card-title">Clean & drinking water facilities.</h5>
                  <p class="card-text">Clean & drinking water facilities.
