--- a/index.html
+++ b/index.html
@@ -243,7 +243,8 @@
     </div>
     </div>
         
-         <h1>COURSES.</h1>
+         <h1 class="text-center"> COURSES..</h1>
+           
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card">
