--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </div>
        
             <div class="card"   >
-            <img src="o.jpg" class="card-img-top" alt="...">
+            <img src="s3.jpg" class="card-img-top" alt="...">
             <div class="card-body"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#LoginModal">
     <h5 class="card-title">Outsourcing Staff.</h5>
                 <p class="card-text">We bring staff from different colleges if we feel there is any need for 
