--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
             <div class="card"   >
             <img src="s3.jpg" class="card-img-top" alt="...">
             <div class="card-body"><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#LoginModal">
-    <h5 class="card-title">Outsourcing Staff.</h5>
-                <p class="card-text">We bring staff from different colleges if we feel there is any need for 
-                    proper operation of college.</p>
+    <h5 class="card-title">Outsourcing Staff.</h5>This type of employee is proactive, a great leader, dependable, diligent,
+                and reliable. They possess qualities that are unique and hard to find, but easily definable.
+                <p class="card-text"> 
+                    .</p>
             </div>
     </div>
     <div class="card-group">
