--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div class="carousel-item active">
       <img src="s.jpg" height="600px" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h1>Government Girls Polytechnic College</h1>
+        <h1>GOVRRNMENT GIRLS POLYTECHNIC GORAKHPUR</h1>
         
       </div>
     </div>
