--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div></div>
 
     <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
@@ -162,7 +162,7 @@
     <div class="carousel-item">
       <img src="gkp.jpeg" height="600px"  class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h1>Better Education </h1>
+        <h1>Better Education</h1>
      
       </div>
     </div>
