--- a/index.html
+++ b/index.html
@@ -21,29 +21,42 @@
 <body background="v2.jpg">
 
 
-<header  id="header" class="fixed-top">
-<div class ="container d-fex align-items-center">
-<h1 class="logo mr-auto">
-    <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
-</h1>
-<nav class="nav-menu d-none d-lg-block">
-<ul>
-    <li  class="active"> <a href="/ggp/index.html">HOME</a></li>
-    <li  class="active"> <a href="/ggp/about.html">ABOUT</a></li>
-    <li  class="active"> <a  href="/ggp/placement.html">PLACEMENT</a></li>
-    <li  class="active"> <a  href="/ggp/committee.html">COMMITTEE</a></li>
-    <li  class="active"> <a href="/ggp/campus.html">CAMPUS</a></li>
-    <li  class="active"> <a href="/ggp/images.html">IMAGES</a></li>
-    <li  class="active"> <a href="/ggp/student.html">STUDENT LIFE</a></li>
-    <li  class="active"> <a href="/ggp/media.html"> NEWS & MEDIA</a></li>
-    <li  class="active"> <a href="/ggp/admission.html">ADMISSION</a></li>
-    <li  class="active"> <a href="/ggp/contact.html">CONTACT US</a></li>
-</ul>
-</nav>
-</div>
-<a href="#" class="get-started-btn scrollto">GET STARTED</a>
-    </header>
+<header id="header" class="fixed-top">
+    <div class="container d-fex align-items-center">
+      <h1 class="logo mr-auto">
+        <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
+      </h1>
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li class="active"> <a href="/ggp/index.html">HOME</a></li>
+          <li class="active"> <a href="/ggp/about.html">ABOUT</a></li>
+          <li class="active"> <a href="/ggp/placement.html">PLACEMENT</a></li>
+          <li class="active"> <a href="/ggp/committee.html">COMMITTEE</a></li>
+          <li class="active"> <a href="/ggp/campus.html">CAMPUS</a></li>
+          <li class="active"> <a href="/ggp/images.html">IMAGES</a></li>
+          <li class="active"> <a href="/ggp/student.html">STUDENT LIFE</a></li>
+          <li class="active"> <a href="/ggp/media.html"> NEWS & MEDIA</a></li>
+          <li class="active"> <a href="/ggp/admission.html">ADMISSION</a></li>
+          <li class="active"> <a href="/ggp/contact.html">CONTACT US</a></li>
+        </ul>
 
+
+        <a href="#" class="get-started-btn scrollto">GET STARTED</a>
+
+
+        <form class="d-flex" role="search">
+    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-primary" type="submit">Search</button>
+  </form>
+  <div class="mx-2">
+    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
+  </header>
+
+  
+  </div>
+  </div>
+  </nav>
 
 
 
