--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <header id="header" class="fixed-top">
     <div class="container d-fex align-items-center">
       <h1 class="logo mr-auto">
-        <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
+        <a href="#">GOV.POLYTECHNIC GORAKHPUR</a>
       </h1>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
