--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
         </ul>
 
 
-        <a href="#" class="get-started-btn scrollto">GET STARTED</a>
-
-
         <form class="d-flex" role="search">
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
@@ -51,13 +48,13 @@
   <div class="mx-2">
     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
-  </header>
 
-  
   </div>
   </div>
   </nav>
-
+     <a href="#" class="get-started-btn scrollto">GET STARTED</a>
+</div>
+ </header>
 
 
     
