--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 <header id="header" class="fixed-top">
     <div class="container d-fex align-items-center">
       <h1 class="logo mr-auto">
+
+<div id
+          
         <a href="#">GOV.POLYTECHNIC GORAKHPUR</a>
       </h1>
       <nav class="nav-menu d-none d-lg-block">
