--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
 <body background="v2.jpg">
 
 
+
 <header id="header" class="fixed-top">
     <div class="container d-fex align-items-center">
       <h1 class="logo mr-auto">
-
-<div id
-          
-        <a href="#">GOV.POLYTECHNIC GORAKHPUR</a>
+        <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
       </h1>
       <nav class="nav-menu d-none d-lg-block">
+
+
+          
         <ul>
           <li class="active"> <a href="/ggp/index.html">HOME</a></li>
           <li class="active"> <a href="/ggp/about.html">ABOUT</a></li>
