--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
   </div>
   </nav>
-     <a href="#" class="get-started-btn scrollto">GET STARTED</a>
+     <a href="#" class="get-started-btn scrollto">MOVE ON</a>
 </div>
  </header>
 
