--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
         <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
       </h1>
       <nav class="nav-menu d-none d-lg-block">
+
+
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+
+
+          
+          
         <ul>
           <li class="active"> <a href="/ggp/index.html">HOME</a></li>
           <li class="active"> <a href="/ggp/about.html">ABOUT</a></li>
