--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <body background="v2.jpg">
 <header id="header" class="fixed-top">
     <div class="container d-fex align-items-center">
-      <h1 class="logo mr-auto">
+      <h3 class="logo mr-auto">
         <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
-      </h1>
-      <nav class="nav-menu d-none d-lg-block">
+      </h3>
+      <nav class="nav-menu  navbar-expand-sm d-none d-lg-block">
 
 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
