--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3 class="logo mr-auto">
         <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
       </h3>
-      <nav class="nav-menu  navbar-expand-sm d-none d-lg-block">
+      <nav class="nav-menu  d-none d-lg-block">
 
 
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
