--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
   </div>
   </nav>
      <a href="#" class="get-started-btn scrollto">MOVE ON</a>
-</div>
+
+<label for="nav_check" class="ham></label>
+    <div></div>
+     <div></div>
+     <div></div>
+
  </header>
    <!-- login modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
