--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
       <h3 class="logo mr-auto">
         <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
       </h3>
-      <nav class="nav-menu  d-none d-lg-block">
-          
-        <ul>
+      <nav class="nav-menu  d-none d-lg-block>
+
+ <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="active"> <a href="/ggp/index.html">HOME</a></li>
           <li class="active"> <a href="/ggp/about.html">ABOUT</a></li>
           <li class="active"> <a href="/ggp/placement.html">PLACEMENT</a></li>
@@ -50,6 +56,7 @@
 
   </div>
   </div>
+    </div>
   </nav>
      <a href="#" class="get-started-btn scrollto">MOVE ON</a>
 
