--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 <header id="header" class="fixed-top">
     <div class="container d-fex align-items-center">
       <h3 class="logo mr-auto">
-        <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
+        <a  class="navbar-brand" href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
       </h3>
       <nav class="nav-menu  d-none d-lg-block>
 
- <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+
+   
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
