--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body background="v2.jpg">
 <header id="header" class="fixed-top">
-    <div class="container d-fex align-items-center">
+    <div class="container d-flex align-items-center">
       <h3 class="logo mr-auto">
         <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
       </h3>
