--- a/index.html
+++ b/index.html
@@ -40,17 +40,13 @@
         <form class="d-flex" role="search">
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
-  </form></nav>
+  </form>
   <div class="mx-2">
     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
-  </div>
-  
-  
+  </div></nav>
      <a href="#" class="get-started-btn scrollto">MOVE ON</a>
     </div>
-
-
  </header>
    <!-- login modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
