--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3 class="logo mr-auto">
         <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
       </h3>
-      <nav class="nav-menu  d-none d-lg-block>
+      <nav class="nav-menu  d-none d-lg-block">
       <ul>
           <li class="active"> <a href="/ggp/index.html">HOME</a></li>
           <li class="active"> <a href="/ggp/about.html">ABOUT</a></li>
