--- a/index.html
+++ b/index.html
@@ -48,6 +48,43 @@
      <a href="#" class="get-started-btn scrollto">MOVE ON</a>
     </div>
  </header>
+
+
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">GGPGKP</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="active"> <a href="/ggp/index.html">HOME</a></li>
+        <li class="active"> <a href="/ggp/about.html">ABOUT</a></li>
+        <li class="active"> <a href="/ggp/placement.html">PLACEMENT</a></li>
+        <li class="active"> <a href="/ggp/committee.html">COMMITTEE</a></li>
+        <li class="active"> <a href="/ggp/campus.html">CAMPUS</a></li>
+        <li class="active"> <a href="/ggp/images.html">IMAGES</a></li>
+        <li class="active"> <a href="/ggp/student.html">STUDENT LIFE</a></li>
+        <li class="active"> <a href="/ggp/media.html"> NEWS & MEDIA</a></li>
+        <li class="active"> <a href="/ggp/admission.html">ADMISSION</a></li>
+        <li class="active"> <a href="/ggp/contact.html">CONTACT US</a></li>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary" type="submit">Search</button>
+      </form>
+      <div class="mx-2">
+        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
+      </div>
+    </div>
+  </nav>
+
+
+
+    
    <!-- login modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog">
