--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 
-
+<header id="header" class="fixed-top">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">GGPGKP</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,6 +81,7 @@
       </div>
     </div>
   </nav>
+    </header>
 
 
 
