--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <div class="container d-flex align-items-center">
       <h3 class="logo mr-auto">
         <a href="#">GOVERNMENT POLYTECHNIC GORAKHPUR</a>
+
+ <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+          
       </h3>
       <nav class="nav-menu  d-none d-lg-block">
       <ul>
