--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="active"> <a href="/ggp/index.html">HOME</a></li>
-        <li class="active"> <a href="/ggp/about.html">ABOUT</a></li>
+        <li class=" nav-item active"> <a href="/ggp/index.html">HOME</a></li>
+        <li class=" nav-item active"> <a href="/ggp/about.html">ABOUT</a></li>
         <li class="active"> <a href="/ggp/placement.html">PLACEMENT</a></li>
         <li class="active"> <a href="/ggp/committee.html">COMMITTEE</a></li>
         <li class="active"> <a href="/ggp/campus.html">CAMPUS</a></li>
