--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body background="v2.jpg">
 <header id="header" class="fixed-top">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
    <h1> <a class="navbar-brand" href="#">GGPGKP</a> </h1>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
