--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class=" nav-item active"> <a  class="nav-link" href="/ggp/index.html">HOME</a></li>
-        <li class=" nav-item active"> <a  class="nav-link" href="/ggp/about.html">ABOUT</a></li>
-        <li class="active"> <a    class="nav-link" href="/ggp/placement.html">PLACEMENT</a></li>
-        <li class="active"> <a  class="nav-link"   href="/ggp/committee.html">COMMITTEE</a></li>
-        <li class="active"> <a   class="nav-link"  href="/ggp/campus.html">CAMPUS</a></li>
-        <li class="active"> <a   class="nav-link"  href="/ggp/images.html">IMAGES</a></li>
-        <li class="active"> <a  class="nav-link"  href="/ggp/student.html">STUDENT LIFE</a></li>
-        <li class="active"> <a class="nav-link"  href="/ggp/media.html"> NEWS & MEDIA</a></li>
-        <li class="active"> <a class="nav-link"  href="/ggp/admission.html">ADMISSION</a></li>
-        <li class="active"> <a class="nav-link"  href="/ggp/contact.html">CONTACT US</a></li>
+        <li class=" nav-item"> <a  class="nav-link" href="/ggp/about.html">ABOUT</a></li>
+        <li class="nav-item"> <a    class="nav-link" href="/ggp/placement.html">PLACEMENT</a></li>
+        <li class="nav-item"> <a  class="nav-link"   href="/ggp/committee.html">COMMITTEE</a></li>
+        <li class="nav-item"> <a   class="nav-link"  href="/ggp/campus.html">CAMPUS</a></li>
+        <li class="nav-item"> <a   class="nav-link"  href="/ggp/images.html">IMAGES</a></li>
+        <li class="nav-item"> <a  class="nav-link"  href="/ggp/student.html">STUDENT LIFE</a></li>
+        <li class="nav-item"> <a class="nav-link"  href="/ggp/media.html"> NEWS & MEDIA</a></li>
+        <li class="nav-item"> <a class="nav-link"  href="/ggp/admission.html">ADMISSION</a></li>
+        <li class="nav-item"> <a class="nav-link"  href="/ggp/contact.html">CONTACT US</a></li>
         </li>
       </ul>
       <form class="d-flex" role="search">
