--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
       </div>
     </div>
-  </div></div>
+  </div>
 
     <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
