--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signupModal">SignUp</button>
       </div>
     </div>
+</div>
   </nav>
     </header>
    <!-- login modal -->
