--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 
     </div>
     <br>
-    <form class="row g-3">
+    <form class="row g-3" action="connect.php"method="post">
         <div class="col-md-6">
             <label for="inputEmail4" class="form-label">
                 <h3>Email:</h3>
