--- a/contact.html
+++ b/contact.html
@@ -79,20 +79,20 @@
                 <h3>Email:</h3>
             </label>
 
-            <input type="text" class="form-control" id="inputemail" placeholder="@gmail.com">
+            <input type="text" class="form-control" id="inputemail" name="email" placeholder="@gmail.com">
         </div><br>
         <div class="col-md-6">
             <label for="inputPassword4" class="form-label">
                 <h3>Password:</h3>
             </label>
 
-            <input type="text" class="form-control" id="inputpassword" placeholder="password">
+            <input type="text" class="form-control" id="inputpassword" name="password" placeholder="password">
         </div><br>
         <div class="col-12">
             <label for="inputAddress" class="form-label">
                 <h3>Address:</h3>
             </label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            <input type="text" class="form-control" id="inputAddress" name="address" placeholder="1234 Main St">
         </div><br>
 
         <div class="col-12">
